--- a/horizon/locale/ja/LC_MESSAGES/django.po
+++ b/horizon/locale/ja/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: openstack-dashboard\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2012-03-22 16:59-0700\n"
+"POT-Creation-Date: 2012-03-23 14:26+0800\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: Takeshi Nakajima <tnakaji@midokura.jp>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -143,11 +143,10 @@ msgid "Pool"
 msgstr ""
 
 #: dashboards/nova/access_and_security/floating_ips/forms.py:91
-#, python-format
+#, fuzzy, python-format
 msgid ""
-"Successfully allocated Floating IP \"%(ip)s"
-"\"                                 to project \"%(project)s\""
-msgstr ""
+"Successfully allocated Floating IP \"%(ip)s\" to project \"%(project)s\""
+msgstr "正常にVPNプロジェクト%(proj)sを開始しました。"
 
 #: dashboards/nova/access_and_security/floating_ips/forms.py:95
 #, fuzzy
@@ -755,9 +754,7 @@ msgid "No keypairs available."
 msgstr "現在イメージがありません。"
 
 #: dashboards/nova/images_and_snapshots/images/forms.py:152
-msgid ""
-"Cannot launch more than one instance if volume                     is "
-"specified."
+msgid "Cannot launch more than one instance if volume is specified."
 msgstr ""
 
 #: dashboards/nova/images_and_snapshots/images/forms.py:180
@@ -1110,9 +1107,7 @@ msgstr ""
 
 #: dashboards/nova/instances_and_volumes/volumes/forms.py:80
 #, python-format
-msgid ""
-"Attaching volume %(vol)s to instance                             %(inst)s at "
-"%(dev)s"
+msgid "Attaching volume %(vol)s to instance %(inst)s at %(dev)s"
 msgstr ""
 
 #: dashboards/nova/instances_and_volumes/volumes/forms.py:89
@@ -2874,9 +2869,6 @@ msgstr ""
 
 #~ msgid "A security group named %s already exists."
 #~ msgstr "%sというセキュリティグループは既に存在します。"
-
-#~ msgid "Successfully started VPN for project %(proj)s."
-#~ msgstr "正常にVPNプロジェクト%(proj)sを開始しました。"
 
 #~ msgid "Unable to start VPN for the project %(proj)s: %(code)s - %(msg)s"
 #~ msgstr ""
