--- a/horizon/locale/pl/LC_MESSAGES/django.po
+++ b/horizon/locale/pl/LC_MESSAGES/django.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: openstack-dashboard\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2012-03-22 16:59-0700\n"
+"POT-Creation-Date: 2012-03-23 14:26+0800\n"
 "PO-Revision-Date: 2011-09-24 14:41+0100\n"
 "Last-Translator: Tomasz 'Zen' Napierala <tomasz@napierala.org>\n"
 "Language-Team: Polish OpenStack translations team <tomasz+openstack-"
@@ -144,11 +144,10 @@ msgid "Pool"
 msgstr ""
 
 #: dashboards/nova/access_and_security/floating_ips/forms.py:91
-#, python-format
+#, fuzzy, python-format
 msgid ""
-"Successfully allocated Floating IP \"%(ip)s"
-"\"                                 to project \"%(project)s\""
-msgstr ""
+"Successfully allocated Floating IP \"%(ip)s\" to project \"%(project)s\""
+msgstr "Pomyślnie uruchomiono VPN dla projektu %(proj)s."
 
 #: dashboards/nova/access_and_security/floating_ips/forms.py:95
 #, fuzzy
@@ -747,9 +746,7 @@ msgid "No keypairs available."
 msgstr "brak dostępnych"
 
 #: dashboards/nova/images_and_snapshots/images/forms.py:152
-msgid ""
-"Cannot launch more than one instance if volume                     is "
-"specified."
+msgid "Cannot launch more than one instance if volume is specified."
 msgstr ""
 
 #: dashboards/nova/images_and_snapshots/images/forms.py:180
@@ -1099,9 +1096,7 @@ msgstr ""
 
 #: dashboards/nova/instances_and_volumes/volumes/forms.py:80
 #, python-format
-msgid ""
-"Attaching volume %(vol)s to instance                             %(inst)s at "
-"%(dev)s"
+msgid "Attaching volume %(vol)s to instance %(inst)s at %(dev)s"
 msgstr ""
 
 #: dashboards/nova/instances_and_volumes/volumes/forms.py:89
@@ -2818,9 +2813,6 @@ msgstr ""
 
 #~ msgid "A security group named %s already exists."
 #~ msgstr "Grupa bezpieczeństwa %s juz istnieje."
-
-#~ msgid "Successfully started VPN for project %(proj)s."
-#~ msgstr "Pomyślnie uruchomiono VPN dla projektu %(proj)s."
 
 #~ msgid "Unable to start VPN for the project %(proj)s: %(code)s - %(msg)s"
 #~ msgstr "Nie można uruchomić VPN dla projektu  %(proj)s: %(code)s - %(msg)s"
