fix cidr help text
fixes bug 971980

Change-Id: Ia3319bf5654daa8d034ee8b6844405dffba915ef

--- a/AUTHORS
+++ b/AUTHORS
@@ -18,6 +18,7 @@ Greg Althaus <galthaus@austin.rr.com>
 Hengqing Hu <hudayou@hotmail.com>
 Ionuț Arțăriși <iartarisi@suse.cz>
 Ivan Kolodyazhny <e0ne@e0ne.info>
+J. Daniel Schmidt <jdsn@suse.de>
 Jake Dahn <jake@ansolabs.com>
 Jake Zukowski <jake@ponyloaf.com>
 James E. Blair <james.blair@rackspace.com>
