--- a/horizon/locale/zh_TW/LC_MESSAGES/django.po
+++ b/horizon/locale/zh_TW/LC_MESSAGES/django.po
@@ -381,7 +381,7 @@ msgid "CIDR"
 msgstr ""
 
 #: dashboards/nova/access_and_security/security_groups/forms.py:88
-msgid "Classless Inter-Domain Routing (i.e. 192.168.0.0/24"
+msgid "Classless Inter-Domain Routing (e.g. 192.168.0.0/24)"
 msgstr "Classless Inter-Domain Routing （例如192.168.0.0/24）"
 
 #: dashboards/nova/access_and_security/security_groups/forms.py:114
