Adds S3_URL to generated ec2rc.sh template.
Fixes bug 987678

Change-Id: I5e4d82b0724a7827fa73625160381bf2df58905b

--- a/AUTHORS
+++ b/AUTHORS
@@ -38,6 +38,7 @@ Mike Scherbakov <mihgen@gmail.com>
 Monty Taylor <mordred@inaugust.com>
 Neil Johnston <onewheeldrive.net@gmail.com>
 Paul McMillan <paul.mcmillan@nebula.com>
+Sam Morrison <sorrison@gmail.com>
 Stephane Angot <sa@hydre.org>
 termie <github@anarkystic.com>
 Thierry Carrez <thierry@openstack.org>
