--- a/AUTHORS
+++ b/AUTHORS
@@ -3,6 +3,7 @@ Andrews Medina <andrewsmedina@gmail.com>
 Andy Chong <andycjw@gmail.com>
 Anthony Young <sleepsonthefloor@gmail.com>
 Arvind Somya <asomya@cisco.com>
+Bernhard M. Wiedemann <bwiedemann@suse.de>
 Carlo Truijllo <truijllo@crs4.it>
 Chuck Short <chuck.short@canonical.com>
 Cole Robinson <crobinso@redhat.com>
