Complete Simplified Chinese translation for po file.
Fixes bug 988649.

Change-Id: I48d8f288f046fa10ed9108643b5777806267086f

--- a/AUTHORS
+++ b/AUTHORS
@@ -51,3 +51,4 @@ Vishvananda Ishaya <vishvananda@gmail.com>
 Yuriy Taraday <yorik.sar@gmail.com>
 ZhongYue Luo <lzyeval@gmail.com>
 Ziad Sawalha <github@highbridgellc.com>
+ZHANG Hua <zhuadl@cn.ibm.com>
