bug/997665 Po file has been created under locale directory for French, but it has not been translated, all message strings are empty.
Change-Id: I473ec39254ef9ee11df419d6e68a8e6c0f099563

Headers and AUTHORS file updated.

Change-Id: I473ec39254ef9ee11df419d6e68a8e6c0f099563

--- a/AUTHORS
+++ b/AUTHORS
@@ -12,6 +12,7 @@ Devin Carlen <devin.carlen@gmail.com>
 Doug Doan <dougdoan@gmail.com>
 Duncan McGreggor <duncan@dreamhost.com>
 Emma Steimann <emmasteimann@gmail.com>
+Erwan Gallen <dev@zinux.com>
 Ewan Mellor <ewan.mellor@citrix.com>
 Gabriel Hurley <gabriel@strikeawe.com>
 Ghe Rivero <ghe@debian.org>
