bug 999371, add a simple test case to test the tag
add name and contact info to AUTHORS file. Change Author in the commit
message, add email to .mailmap

Change-Id: Ic9aba5dfde0aae0faee6b944d253cd3d9d8ea4e7

--- a/AUTHORS
+++ b/AUTHORS
@@ -32,6 +32,7 @@ John Postlethwait <john.postlethwait@nebula.com>
 Joseph Heck <heckj@mac.com>
 Joshua McKenty <joshua@pistoncloud.com>
 Julien Danjou <julien.danjou@enovance.com>
+Ke Wu <ke.wu@ibeca.me>
 Ken Pepple <ken.pepple@gmail.com>
 Mark Gius <launchpad@markgius.com>
 Michael Szilagyi <mszilagyi@gmail.com>
