update quickstart doc to fix minor typos
fixes bug 1002661
* Changes the name of the directory used for django to be
openstack_dashboard instead of openstack-dashboard
* updates the location of manage.py

Change-Id: I8f04fd90f59d85f0339bd59c9e8d478bcb84f9e2

--- a/AUTHORS
+++ b/AUTHORS
@@ -47,6 +47,7 @@ termie <github@anarkystic.com>
 Thierry Carrez <thierry@openstack.org>
 Tihomir Trifonov <t.trifonov@gmail.com>
 Todd Willey <todd@ansolabs.com>
+Tom Fifield <fifieldt@unimelb.edu.au>
 Tomasz 'Zen' Napierala <tomasz@napierala.org>
 Tres Henry <tres@treshenry.net>
 Vishvananda Ishaya <vishvananda@gmail.com>
