Final versioning for 2012.1.1
Change-Id: Ibfd86df27c531ec2b3d0bb4b0a7feeef46a2989d

--- a/AUTHORS
+++ b/AUTHORS
@@ -32,6 +32,7 @@ Joshua McKenty <joshua@pistoncloud.com>
 Julien Danjou <julien.danjou@enovance.com>
 Ken Pepple <ken.pepple@gmail.com>
 Mark Gius <launchpad@markgius.com>
+Mark McLoughlin <markmc@redhat.com>
 Michael Szilagyi <mszilagyi@gmail.com>
 Mike Perez <thingee@gmail.com>
 Mike Scherbakov <mihgen@gmail.com>
