Changing 'Associate / Disassociate IP' to 'Associate / Disassociate Floating IP' and adding Portuguese translation
Change-Id: I1e92fca05ec9c49a7fceec617df4e66352b6f32c

--- a/horizon/locale/fr/LC_MESSAGES/django.po
+++ b/horizon/locale/fr/LC_MESSAGES/django.po
@@ -180,11 +180,11 @@ msgstr "IPs flottantes"
 
 #: dashboards/nova/access_and_security/floating_ips/tables.py:57
 #: dashboards/nova/templates/nova/access_and_security/floating_ips/_associate.html:22
-msgid "Associate IP"
+msgid "Associate Floating IP"
 msgstr "Associer une adresse IP"
 
 #: dashboards/nova/access_and_security/floating_ips/tables.py:69
-msgid "Disassociate IP"
+msgid "Disassociate Floating IP"
 msgstr "Désassocier une adresse IP"
 
 #: dashboards/nova/access_and_security/floating_ips/tables.py:83
