--- a/horizon/locale/pl/LC_MESSAGES/django.po
+++ b/horizon/locale/pl/LC_MESSAGES/django.po
@@ -192,11 +192,11 @@ msgstr ""
 
 #: dashboards/nova/access_and_security/floating_ips/tables.py:57
 #: dashboards/nova/templates/nova/access_and_security/floating_ips/_associate.html:22
-msgid "Associate IP"
+msgid "Associate Floating IP"
 msgstr ""
 
 #: dashboards/nova/access_and_security/floating_ips/tables.py:69
-msgid "Disassociate IP"
+msgid "Disassociate Floating IP"
 msgstr ""
 
 #: dashboards/nova/access_and_security/floating_ips/tables.py:83
