--- a/horizon/locale/zh_TW/LC_MESSAGES/django.po
+++ b/horizon/locale/zh_TW/LC_MESSAGES/django.po
@@ -179,11 +179,11 @@ msgstr "浮動IP"
 
 #: dashboards/nova/access_and_security/floating_ips/tables.py:57
 #: dashboards/nova/templates/nova/access_and_security/floating_ips/_associate.html:22
-msgid "Associate IP"
+msgid "Associate Floating IP"
 msgstr "配給IP"
 
 #: dashboards/nova/access_and_security/floating_ips/tables.py:69
-msgid "Disassociate IP"
+msgid "Disassociate Floating IP"
 msgstr "釋放IP"
 
 #: dashboards/nova/access_and_security/floating_ips/tables.py:83
