--- a/openstack_dashboard/locale/pt/LC_MESSAGES/django.po
+++ b/openstack_dashboard/locale/pt/LC_MESSAGES/django.po
@@ -1,89 +1,111 @@
 # SOME DESCRIPTIVE TITLE.
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
+# Translators:
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: Horizon\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2012-08-15 01:45+0000\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"POT-Creation-Date: 2012-09-18 22:18+0000\n"
+"PO-Revision-Date: 2012-08-14 08:40+0000\n"
+"Last-Translator: Gabriel Hurley <gabriel@strikeawe.com>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"Language: pt\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 #: settings.py:141
-msgid "English"
+msgid "Bulgarian (Bulgaria)"
 msgstr ""
 
 #: settings.py:142
-msgid "Italiano"
+msgid "Czech"
 msgstr ""
 
 #: settings.py:143
-msgid "Spanish"
-msgstr ""
+msgid "English"
+msgstr "Inglês"
 
 #: settings.py:144
-msgid "French"
-msgstr ""
+msgid "Spanish"
+msgstr "Espanhol"
 
 #: settings.py:145
-msgid "Japanese"
-msgstr ""
+msgid "French"
+msgstr "Francês"
 
 #: settings.py:146
-msgid "Portuguese"
-msgstr ""
+msgid "Italiano"
+msgstr "Italiano"
 
 #: settings.py:147
-msgid "Polish"
-msgstr ""
+msgid "Japanese"
+msgstr "Japonês"
 
 #: settings.py:148
-msgid "Simplified Chinese"
+msgid "Korean (Korea)"
 msgstr ""
 
 #: settings.py:149
-msgid "Traditional Chinese"
+msgid "Dutch (Netherlands)"
 msgstr ""
+
+#: settings.py:150
+msgid "Polish"
+msgstr "Polonês"
+
+#: settings.py:151
+msgid "Portuguese"
+msgstr "Português"
+
+#: settings.py:152
+#, fuzzy
+msgid "Portuguese (Brazil)"
+msgstr "Português"
+
+#: settings.py:153
+msgid "Simplified Chinese"
+msgstr "Chinês Simplificado"
+
+#: settings.py:154
+msgid "Traditional Chinese"
+msgstr "Chinês Tradicional"
 
 #: templates/403.html:4 templates/403.html.py:9
 msgid "Forbidden"
-msgstr ""
+msgstr "Proibido"
 
 #: templates/403.html:20 templates/404.html:19 templates/500.html:19
 msgid "Home"
-msgstr ""
+msgstr "Origem"
 
 #: templates/403.html:24 templates/404.html:23 templates/500.html:23
 msgid "Projects"
-msgstr ""
+msgstr "Projetos"
 
 #: templates/404.html:4
 msgid "Page Not Found"
-msgstr ""
+msgstr "Página não Encontrada"
 
 #: templates/404.html:9
 msgid "The page you were looking for doesn't exist"
-msgstr ""
+msgstr "A página que você estava procurando não existe"
 
 #: templates/404.html:10
 msgid "You may have mistyped the address or the page may have moved."
 msgstr ""
+"Você pode ter digitado incorretamente o endereço ou a página pode ter mudado."
 
 #: templates/500.html:4 templates/500.html.py:9
 msgid "Internal Server Error"
-msgstr ""
+msgstr "Erro Interno do Servidor"
 
 #: templates/500.html:10
 msgid ""
 "An unexpected error occurred while processing your request.  Please try your "
 "request again."
 msgstr ""
+"Ocorreu um erro inesperado ao processar o pedido. Por favor, tente novamente."
