--- a/openstack_dashboard/locale/zh_TW/LC_MESSAGES/django.po
+++ b/openstack_dashboard/locale/zh_TW/LC_MESSAGES/django.po
@@ -1,57 +1,80 @@
 # SOME DESCRIPTIVE TITLE.
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
+# Translators:
+# Chao-Hsiung Liao <pesder@gmail.com>, 2012.
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: Horizon\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2012-08-15 01:45+0000\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"POT-Creation-Date: 2012-09-18 22:18+0000\n"
+"PO-Revision-Date: 2012-08-16 01:59+0000\n"
+"Last-Translator: Chao-Hsiung Liao <pesder@gmail.com>\n"
+"Language-Team: Chinese (Taiwan) (http://www.transifex.com/projects/p/"
+"openstack/language/zh_TW/)\n"
+"Language: zh_TW\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=1; plural=0;\n"
 
 #: settings.py:141
-msgid "English"
+msgid "Bulgarian (Bulgaria)"
 msgstr ""
 
 #: settings.py:142
-msgid "Italiano"
+msgid "Czech"
 msgstr ""
 
 #: settings.py:143
-msgid "Spanish"
-msgstr ""
+msgid "English"
+msgstr "英文"
 
 #: settings.py:144
-msgid "French"
-msgstr ""
+msgid "Spanish"
+msgstr "西班牙文"
 
 #: settings.py:145
-msgid "Japanese"
-msgstr ""
+msgid "French"
+msgstr "法文"
 
 #: settings.py:146
-msgid "Portuguese"
-msgstr ""
+msgid "Italiano"
+msgstr "義大利文"
 
 #: settings.py:147
-msgid "Polish"
-msgstr ""
+msgid "Japanese"
+msgstr "日文"
 
 #: settings.py:148
-msgid "Simplified Chinese"
+msgid "Korean (Korea)"
 msgstr ""
 
 #: settings.py:149
-msgid "Traditional Chinese"
+msgid "Dutch (Netherlands)"
 msgstr ""
+
+#: settings.py:150
+msgid "Polish"
+msgstr "波蘭文"
+
+#: settings.py:151
+msgid "Portuguese"
+msgstr "葡萄牙文"
+
+#: settings.py:152
+#, fuzzy
+msgid "Portuguese (Brazil)"
+msgstr "葡萄牙文"
+
+#: settings.py:153
+msgid "Simplified Chinese"
+msgstr "簡體中文"
+
+#: settings.py:154
+msgid "Traditional Chinese"
+msgstr "繁體中文"
 
 #: templates/403.html:4 templates/403.html.py:9
 msgid "Forbidden"
