Use glance stable/essex rather than master
The pip-requires file should explicitly install stable/essex
glance rather than master. The dependency on glance's client is
broken if horizon tries to use glance master.

Fixes bug 1057125

Change-Id: I770e5e5e854141200307ddd33b1998000fbe57b5

--- a/AUTHORS
+++ b/AUTHORS
@@ -3,6 +3,7 @@ Andrews Medina <andrewsmedina@gmail.com>
 Andy Chong <andycjw@gmail.com>
 Anthony Young <sleepsonthefloor@gmail.com>
 Arvind Somya <asomya@cisco.com>
+Brian Waldon <bcwaldon@gmail.com>
 Carlo Truijllo <truijllo@crs4.it>
 Chuck Short <chuck.short@canonical.com>
 Cole Robinson <crobinso@redhat.com>
